t3 Ok/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> var_declaration
Rule 5     statement -> assignment
Rule 6     statement -> function_declaration
Rule 7     statement -> if_statement
Rule 8     statement -> while_statement
Rule 9     statement -> for_statement
Rule 10    statement -> return_statement
Rule 11    statement -> expression_statement
Rule 12    statement -> print_statement
Rule 13    statement -> compound_statement
Rule 14    var_declaration -> type_specifier ID SEMICOLON
Rule 15    var_declaration -> type_specifier ID EQUALS expression SEMICOLON
Rule 16    type_specifier -> INT
Rule 17    type_specifier -> FLOAT
Rule 18    type_specifier -> DOUBLE
Rule 19    type_specifier -> CHAR
Rule 20    type_specifier -> BOOLEAN
Rule 21    assignment -> ID EQUALS expression SEMICOLON
Rule 22    function_declaration -> type_specifier ID LPAREN parameter_list RPAREN compound_statement
Rule 23    parameter_list -> parameter_list COMMA parameter
Rule 24    parameter_list -> parameter
Rule 25    parameter_list -> empty
Rule 26    parameter -> type_specifier ID
Rule 27    if_statement -> IF LPAREN expression RPAREN compound_statement
Rule 28    if_statement -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement
Rule 29    while_statement -> WHILE LPAREN expression RPAREN compound_statement
Rule 30    for_statement -> FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement
Rule 31    return_statement -> RETURN expression SEMICOLON
Rule 32    expression_statement -> expression SEMICOLON
Rule 33    print_statement -> PRINTLN LPAREN STRING RPAREN SEMICOLON
Rule 34    expression -> logical_or_expression
Rule 35    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 36    logical_or_expression -> logical_and_expression
Rule 37    logical_and_expression -> logical_and_expression AND equality_expression
Rule 38    logical_and_expression -> equality_expression
Rule 39    equality_expression -> equality_expression EQ relational_expression
Rule 40    equality_expression -> equality_expression NE relational_expression
Rule 41    equality_expression -> relational_expression
Rule 42    relational_expression -> relational_expression LT additive_expression
Rule 43    relational_expression -> relational_expression GT additive_expression
Rule 44    relational_expression -> relational_expression LE additive_expression
Rule 45    relational_expression -> relational_expression GE additive_expression
Rule 46    relational_expression -> additive_expression
Rule 47    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 48    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 49    additive_expression -> multiplicative_expression
Rule 50    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 51    multiplicative_expression -> multiplicative_expression DIV unary_expression
Rule 52    multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 53    multiplicative_expression -> unary_expression
Rule 54    unary_expression -> MINUS unary_expression
Rule 55    unary_expression -> NOT unary_expression
Rule 56    unary_expression -> postfix_expression
Rule 57    postfix_expression -> primary_expression
Rule 58    postfix_expression -> ID LPAREN argument_list RPAREN
Rule 59    argument_list -> argument_list COMMA expression
Rule 60    argument_list -> expression
Rule 61    argument_list -> empty
Rule 62    primary_expression -> ID
Rule 63    primary_expression -> NUM_INT
Rule 64    primary_expression -> NUM_DEC
Rule 65    primary_expression -> STRING
Rule 66    primary_expression -> LPAREN expression RPAREN
Rule 67    empty -> <empty>
Rule 68    compound_statement -> LBRACE statement_list RBRACE

Terminals, with rules where they appear

AND                  : 37
BOOLEAN              : 20
CHAR                 : 19
COMMA                : 23 59
DIV                  : 51
DOUBLE               : 18
ELSE                 : 28
EQ                   : 39
EQUALS               : 15 21
FLOAT                : 17
FOR                  : 30
GE                   : 45
GT                   : 43
ID                   : 14 15 21 22 26 58 62
IF                   : 27 28
INT                  : 16
LBRACE               : 68
LE                   : 44
LPAREN               : 22 27 28 29 30 33 58 66
LT                   : 42
MINUS                : 48 54
MOD                  : 52
NE                   : 40
NOT                  : 55
NUM_DEC              : 64
NUM_INT              : 63
OR                   : 35
PLUS                 : 47
PRINTLN              : 33
RBRACE               : 68
RETURN               : 31
RPAREN               : 22 27 28 29 30 33 58 66
SEMICOLON            : 14 15 21 30 30 31 32 33
STRING               : 33 65
TIMES                : 50
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

additive_expression  : 42 43 44 45 46 47 48
argument_list        : 58 59
assignment           : 5
compound_statement   : 13 22 27 28 28 29 30
empty                : 25 61
equality_expression  : 37 38 39 40
expression           : 15 21 27 28 29 30 30 30 31 32 59 60 66
expression_statement : 11
for_statement        : 9
function_declaration : 6
if_statement         : 7
logical_and_expression : 35 36 37
logical_or_expression : 34 35
multiplicative_expression : 47 48 49 50 51 52
parameter            : 23 24
parameter_list       : 22 23
postfix_expression   : 56
primary_expression   : 57
print_statement      : 12
program              : 0
relational_expression : 39 40 41 42 43 44 45
return_statement     : 10
statement            : 2 3
statement_list       : 1 2 68
type_specifier       : 14 15 22 26
unary_expression     : 50 51 52 53 54 55
var_declaration      : 4
while_statement      : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . var_declaration
    (5) statement -> . assignment
    (6) statement -> . function_declaration
    (7) statement -> . if_statement
    (8) statement -> . while_statement
    (9) statement -> . for_statement
    (10) statement -> . return_statement
    (11) statement -> . expression_statement
    (12) statement -> . print_statement
    (13) statement -> . compound_statement
    (14) var_declaration -> . type_specifier ID SEMICOLON
    (15) var_declaration -> . type_specifier ID EQUALS expression SEMICOLON
    (21) assignment -> . ID EQUALS expression SEMICOLON
    (22) function_declaration -> . type_specifier ID LPAREN parameter_list RPAREN compound_statement
    (27) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (28) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (29) while_statement -> . WHILE LPAREN expression RPAREN compound_statement
    (30) for_statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement
    (31) return_statement -> . RETURN expression SEMICOLON
    (32) expression_statement -> . expression SEMICOLON
    (33) print_statement -> . PRINTLN LPAREN STRING RPAREN SEMICOLON
    (68) compound_statement -> . LBRACE statement_list RBRACE
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . CHAR
    (20) type_specifier -> . BOOLEAN
    (34) expression -> . logical_or_expression
    (35) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (36) logical_or_expression -> . logical_and_expression
    (37) logical_and_expression -> . logical_and_expression AND equality_expression
    (38) logical_and_expression -> . equality_expression
    (39) equality_expression -> . equality_expression EQ relational_expression
    (40) equality_expression -> . equality_expression NE relational_expression
    (41) equality_expression -> . relational_expression
    (42) relational_expression -> . relational_expression LT additive_expression
    (43) relational_expression -> . relational_expression GT additive_expression
    (44) relational_expression -> . relational_expression LE additive_expression
    (45) relational_expression -> . relational_expression GE additive_expression
    (46) relational_expression -> . additive_expression
    (47) additive_expression -> . additive_expression PLUS multiplicative_expression
    (48) additive_expression -> . additive_expression MINUS multiplicative_expression
    (49) additive_expression -> . multiplicative_expression
    (50) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (51) multiplicative_expression -> . multiplicative_expression DIV unary_expression
    (52) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (53) multiplicative_expression -> . unary_expression
    (54) unary_expression -> . MINUS unary_expression
    (55) unary_expression -> . NOT unary_expression
    (56) unary_expression -> . postfix_expression
    (57) postfix_expression -> . primary_expression
    (58) postfix_expression -> . ID LPAREN argument_list RPAREN
    (62) primary_expression -> . ID
    (63) primary_expression -> . NUM_INT
    (64) primary_expression -> . NUM_DEC
    (65) primary_expression -> . STRING
    (66) primary_expression -> . LPAREN expression RPAREN

    ID              shift and go to state 15
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 21
    PRINTLN         shift and go to state 22
    LBRACE          shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    DOUBLE          shift and go to state 27
    CHAR            shift and go to state 28
    BOOLEAN         shift and go to state 29
    MINUS           shift and go to state 36
    NOT             shift and go to state 38
    NUM_INT         shift and go to state 41
    NUM_DEC         shift and go to state 42
    STRING          shift and go to state 23
    LPAREN          shift and go to state 17

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    var_declaration                shift and go to state 4
    assignment                     shift and go to state 5
    function_declaration           shift and go to state 6
    if_statement                   shift and go to state 7
    while_statement                shift and go to state 8
    for_statement                  shift and go to state 9
    return_statement               shift and go to state 10
    expression_statement           shift and go to state 11
    print_statement                shift and go to state 12
    compound_statement             shift and go to state 13
    type_specifier                 shift and go to state 14
    expression                     shift and go to state 16
    logical_or_expression          shift and go to state 30
    logical_and_expression         shift and go to state 31
    equality_expression            shift and go to state 32
    relational_expression          shift and go to state 33
    additive_expression            shift and go to state 34
    multiplicative_expression      shift and go to state 35
    unary_expression               shift and go to state 37
    postfix_expression             shift and go to state 39
    primary_expression             shift and go to state 40

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . var_declaration
    (5) statement -> . assignment
    (6) statement -> . function_declaration
    (7) statement -> . if_statement
    (8) statement -> . while_statement
    (9) statement -> . for_statement
    (10) statement -> . return_statement
    (11) statement -> . expression_statement
    (12) statement -> . print_statement
    (13) statement -> . compound_statement
    (14) var_declaration -> . type_specifier ID SEMICOLON
    (15) var_declaration -> . type_specifier ID EQUALS expression SEMICOLON
    (21) assignment -> . ID EQUALS expression SEMICOLON
    (22) function_declaration -> . type_specifier ID LPAREN parameter_list RPAREN compound_statement
    (27) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (28) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (29) while_statement -> . WHILE LPAREN expression RPAREN compound_statement
    (30) for_statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement
    (31) return_statement -> . RETURN expression SEMICOLON
    (32) expression_statement -> . expression SEMICOLON
    (33) print_statement -> . PRINTLN LPAREN STRING RPAREN SEMICOLON
    (68) compound_statement -> . LBRACE statement_list RBRACE
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . CHAR
    (20) type_specifier -> . BOOLEAN
    (34) expression -> . logical_or_expression
    (35) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (36) logical_or_expression -> . logical_and_expression
    (37) logical_and_expression -> . logical_and_expression AND equality_expression
    (38) logical_and_expression -> . equality_expression
    (39) equality_expression -> . equality_expression EQ relational_expression
    (40) equality_expression -> . equality_expression NE relational_expression
    (41) equality_expression -> . relational_expression
    (42) relational_expression -> . relational_expression LT additive_expression
    (43) relational_expression -> . relational_expression GT additive_expression
    (44) relational_expression -> . relational_expression LE additive_expression
    (45) relational_expression -> . relational_expression GE additive_expression
    (46) relational_expression -> . additive_expression
    (47) additive_expression -> . additive_expression PLUS multiplicative_expression
    (48) additive_expression -> . additive_expression MINUS multiplicative_expression
    (49) additive_expression -> . multiplicative_expression
    (50) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (51) multiplicative_expression -> . multiplicative_expression DIV unary_expression
    (52) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (53) multiplicative_expression -> . unary_expression
    (54) unary_expression -> . MINUS unary_expression
    (55) unary_expression -> . NOT unary_expression
    (56) unary_expression -> . postfix_expression
    (57) postfix_expression -> . primary_expression
    (58) postfix_expression -> . ID LPAREN argument_list RPAREN
    (62) primary_expression -> . ID
    (63) primary_expression -> . NUM_INT
    (64) primary_expression -> . NUM_DEC
    (65) primary_expression -> . STRING
    (66) primary_expression -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    ID              shift and go to state 15
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 21
    PRINTLN         shift and go to state 22
    LBRACE          shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    DOUBLE          shift and go to state 27
    CHAR            shift and go to state 28
    BOOLEAN         shift and go to state 29
    MINUS           shift and go to state 36
    NOT             shift and go to state 38
    NUM_INT         shift and go to state 41
    NUM_DEC         shift and go to state 42
    STRING          shift and go to state 23
    LPAREN          shift and go to state 17

    statement                      shift and go to state 43
    var_declaration                shift and go to state 4
    assignment                     shift and go to state 5
    function_declaration           shift and go to state 6
    if_statement                   shift and go to state 7
    while_statement                shift and go to state 8
    for_statement                  shift and go to state 9
    return_statement               shift and go to state 10
    expression_statement           shift and go to state 11
    print_statement                shift and go to state 12
    compound_statement             shift and go to state 13
    type_specifier                 shift and go to state 14
    expression                     shift and go to state 16
    logical_or_expression          shift and go to state 30
    logical_and_expression         shift and go to state 31
    equality_expression            shift and go to state 32
    relational_expression          shift and go to state 33
    additive_expression            shift and go to state 34
    multiplicative_expression      shift and go to state 35
    unary_expression               shift and go to state 37
    postfix_expression             shift and go to state 39
    primary_expression             shift and go to state 40

state 3

    (3) statement_list -> statement .

    ID              reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    PRINTLN         reduce using rule 3 (statement_list -> statement .)
    LBRACE          reduce using rule 3 (statement_list -> statement .)
    INT             reduce using rule 3 (statement_list -> statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement .)
    DOUBLE          reduce using rule 3 (statement_list -> statement .)
    CHAR            reduce using rule 3 (statement_list -> statement .)
    BOOLEAN         reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    NUM_INT         reduce using rule 3 (statement_list -> statement .)
    NUM_DEC         reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> var_declaration .

    ID              reduce using rule 4 (statement -> var_declaration .)
    IF              reduce using rule 4 (statement -> var_declaration .)
    WHILE           reduce using rule 4 (statement -> var_declaration .)
    FOR             reduce using rule 4 (statement -> var_declaration .)
    RETURN          reduce using rule 4 (statement -> var_declaration .)
    PRINTLN         reduce using rule 4 (statement -> var_declaration .)
    LBRACE          reduce using rule 4 (statement -> var_declaration .)
    INT             reduce using rule 4 (statement -> var_declaration .)
    FLOAT           reduce using rule 4 (statement -> var_declaration .)
    DOUBLE          reduce using rule 4 (statement -> var_declaration .)
    CHAR            reduce using rule 4 (statement -> var_declaration .)
    BOOLEAN         reduce using rule 4 (statement -> var_declaration .)
    MINUS           reduce using rule 4 (statement -> var_declaration .)
    NOT             reduce using rule 4 (statement -> var_declaration .)
    NUM_INT         reduce using rule 4 (statement -> var_declaration .)
    NUM_DEC         reduce using rule 4 (statement -> var_declaration .)
    STRING          reduce using rule 4 (statement -> var_declaration .)
    LPAREN          reduce using rule 4 (statement -> var_declaration .)
    $end            reduce using rule 4 (statement -> var_declaration .)
    RBRACE          reduce using rule 4 (statement -> var_declaration .)


state 5

    (5) statement -> assignment .

    ID              reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    RETURN          reduce using rule 5 (statement -> assignment .)
    PRINTLN         reduce using rule 5 (statement -> assignment .)
    LBRACE          reduce using rule 5 (statement -> assignment .)
    INT             reduce using rule 5 (statement -> assignment .)
    FLOAT           reduce using rule 5 (statement -> assignment .)
    DOUBLE          reduce using rule 5 (statement -> assignment .)
    CHAR            reduce using rule 5 (statement -> assignment .)
    BOOLEAN         reduce using rule 5 (statement -> assignment .)
    MINUS           reduce using rule 5 (statement -> assignment .)
    NOT             reduce using rule 5 (statement -> assignment .)
    NUM_INT         reduce using rule 5 (statement -> assignment .)
    NUM_DEC         reduce using rule 5 (statement -> assignment .)
    STRING          reduce using rule 5 (statement -> assignment .)
    LPAREN          reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> function_declaration .

    ID              reduce using rule 6 (statement -> function_declaration .)
    IF              reduce using rule 6 (statement -> function_declaration .)
    WHILE           reduce using rule 6 (statement -> function_declaration .)
    FOR             reduce using rule 6 (statement -> function_declaration .)
    RETURN          reduce using rule 6 (statement -> function_declaration .)
    PRINTLN         reduce using rule 6 (statement -> function_declaration .)
    LBRACE          reduce using rule 6 (statement -> function_declaration .)
    INT             reduce using rule 6 (statement -> function_declaration .)
    FLOAT           reduce using rule 6 (statement -> function_declaration .)
    DOUBLE          reduce using rule 6 (statement -> function_declaration .)
    CHAR            reduce using rule 6 (statement -> function_declaration .)
    BOOLEAN         reduce using rule 6 (statement -> function_declaration .)
    MINUS           reduce using rule 6 (statement -> function_declaration .)
    NOT             reduce using rule 6 (statement -> function_declaration .)
    NUM_INT         reduce using rule 6 (statement -> function_declaration .)
    NUM_DEC         reduce using rule 6 (statement -> function_declaration .)
    STRING          reduce using rule 6 (statement -> function_declaration .)
    LPAREN          reduce using rule 6 (statement -> function_declaration .)
    $end            reduce using rule 6 (statement -> function_declaration .)
    RBRACE          reduce using rule 6 (statement -> function_declaration .)


state 7

    (7) statement -> if_statement .

    ID              reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    WHILE           reduce using rule 7 (statement -> if_statement .)
    FOR             reduce using rule 7 (statement -> if_statement .)
    RETURN          reduce using rule 7 (statement -> if_statement .)
    PRINTLN         reduce using rule 7 (statement -> if_statement .)
    LBRACE          reduce using rule 7 (statement -> if_statement .)
    INT             reduce using rule 7 (statement -> if_statement .)
    FLOAT           reduce using rule 7 (statement -> if_statement .)
    DOUBLE          reduce using rule 7 (statement -> if_statement .)
    CHAR            reduce using rule 7 (statement -> if_statement .)
    BOOLEAN         reduce using rule 7 (statement -> if_statement .)
    MINUS           reduce using rule 7 (statement -> if_statement .)
    NOT             reduce using rule 7 (statement -> if_statement .)
    NUM_INT         reduce using rule 7 (statement -> if_statement .)
    NUM_DEC         reduce using rule 7 (statement -> if_statement .)
    STRING          reduce using rule 7 (statement -> if_statement .)
    LPAREN          reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    RBRACE          reduce using rule 7 (statement -> if_statement .)


state 8

    (8) statement -> while_statement .

    ID              reduce using rule 8 (statement -> while_statement .)
    IF              reduce using rule 8 (statement -> while_statement .)
    WHILE           reduce using rule 8 (statement -> while_statement .)
    FOR             reduce using rule 8 (statement -> while_statement .)
    RETURN          reduce using rule 8 (statement -> while_statement .)
    PRINTLN         reduce using rule 8 (statement -> while_statement .)
    LBRACE          reduce using rule 8 (statement -> while_statement .)
    INT             reduce using rule 8 (statement -> while_statement .)
    FLOAT           reduce using rule 8 (statement -> while_statement .)
    DOUBLE          reduce using rule 8 (statement -> while_statement .)
    CHAR            reduce using rule 8 (statement -> while_statement .)
    BOOLEAN         reduce using rule 8 (statement -> while_statement .)
    MINUS           reduce using rule 8 (statement -> while_statement .)
    NOT             reduce using rule 8 (statement -> while_statement .)
    NUM_INT         reduce using rule 8 (statement -> while_statement .)
    NUM_DEC         reduce using rule 8 (statement -> while_statement .)
    STRING          reduce using rule 8 (statement -> while_statement .)
    LPAREN          reduce using rule 8 (statement -> while_statement .)
    $end            reduce using rule 8 (statement -> while_statement .)
    RBRACE          reduce using rule 8 (statement -> while_statement .)


state 9

    (9) statement -> for_statement .

    ID              reduce using rule 9 (statement -> for_statement .)
    IF              reduce using rule 9 (statement -> for_statement .)
    WHILE           reduce using rule 9 (statement -> for_statement .)
    FOR             reduce using rule 9 (statement -> for_statement .)
    RETURN          reduce using rule 9 (statement -> for_statement .)
    PRINTLN         reduce using rule 9 (statement -> for_statement .)
    LBRACE          reduce using rule 9 (statement -> for_statement .)
    INT             reduce using rule 9 (statement -> for_statement .)
    FLOAT           reduce using rule 9 (statement -> for_statement .)
    DOUBLE          reduce using rule 9 (statement -> for_statement .)
    CHAR            reduce using rule 9 (statement -> for_statement .)
    BOOLEAN         reduce using rule 9 (statement -> for_statement .)
    MINUS           reduce using rule 9 (statement -> for_statement .)
    NOT             reduce using rule 9 (statement -> for_statement .)
    NUM_INT         reduce using rule 9 (statement -> for_statement .)
    NUM_DEC         reduce using rule 9 (statement -> for_statement .)
    STRING          reduce using rule 9 (statement -> for_statement .)
    LPAREN          reduce using rule 9 (statement -> for_statement .)
    $end            reduce using rule 9 (statement -> for_statement .)
    RBRACE          reduce using rule 9 (statement -> for_statement .)


state 10

    (10) statement -> return_statement .
